# platform-documents

./: .gitignore  README.md
doc-agent/: .gitignore  README.md  pyproject.toml  setup.sh
doc-agent/config/: config.example.yaml
doc-agent/config/prompts/: system-prompts.yaml
doc-agent/scripts/: batch_generate_docs.sh
doc-agent/src/: __init__.py  main.py  orchestrator.py
doc-agent/src/agents/: __init__.py  base.py
doc-agent/src/agents/analysis/: __init__.py  architecture_inference.py  domain_mapper.py
doc-agent/src/agents/discovery/: __init__.py  code_analyzer.py  (+5 more)
doc-agent/src/analyzers/: __init__.py  ai_analyzer.py  base.py  factory.py  integration.py  models.py  repo_type_detector.py
doc-agent/src/auth/: __init__.py  aws_sso.py  oauth.py  token_cache.py
doc-agent/src/context/: __init__.py  file_store.py
doc-agent/src/documentation/: __init__.py  ai_content_writer.py  ai_template_generator.py
doc-agent/src/knowledge/: __init__.py  graph.py  models.py  store.py
doc-agent/src/llm/: __init__.py  model_selector.py
doc-agent/src/mcp/: __init__.py  client.py  confluence.py  docs360.py  github.py  jira.py
doc-agent/src/parsers/: __init__.py  graphql_parser.py  openapi_parser.py  route_extractor.py
doc-agent/src/templates/: __init__.py  renderer.py
doc-agent/src/tools/: __init__.py  file_tools.py  shell_tool.py  tool_registry.py
doc-agent/src/tracking/: __init__.py  token_tracker.py
doc-agent/src/utils/: __init__.py  logging.py  markdown.py
doc-agent/templates/: api-overview.md.j2  architecture-overview.md.j2  data-flows.md.j2  domain-overview.md.j2  index.md.j2  operations.md.j2  service-readme.md.j2
doc-spawner/: .gitignore  README.md  openrouter_activity_2026-01-22.csv  pyproject.toml
doc-spawner/config/: config.example.yaml  test-config.yaml
doc-spawner/src/spawner/: __init__.py  executor.py  main.py  mcp_client.py  mcp_tools.py  models.py  models_config.py  openrouter_client.py  prompts.py  task_queue.py  tools.py  watcher.py
(+362 files in other folders)
